# acecoderv2

./: .dockerignore  .gitignore  CHANGELOG.md  CONDA_SETUP.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.acecoder2  Dockerfile.interactive  LICENSE  Makefile  PARQUET_CONVERSION_USAGE.md  PROJECT_SUMMARY.md  README.md  SKIP_STEP4_USAGE.md  app.py  convert_to_parquet.py  create_mock_data.py  docker-compose.dev.yml  docker-compose.yml  docker-hub-setup.sh  docker-run.sh  docker-start.sh  env.example  environment-dev.yml  environment.yml  gradio_visualizer.py  hf_dataset_converter.py  integrated_gradio_app.py  main.py  main_full.py  merge_test_cases.py  openai_client.py  openai_utils.py  prepare_hf_dataset.py  prepare_round8_upload.py  pyproject.toml  requirements.txt  step1.1_parsing.py  step1_prompting.py  step2.1_gen.sh  (+9 more)
.devcontainer/: README.md  devcontainer.json
code_eval/: __init__.py  test_eval.py  utils.py
code_eval/acecoder/: __init__.py  eval_test_cases.py  evalplus_eval.py
code_eval/prime_code/: testing_util.py
outputs/acecoder_rounds/: step1.1_parsing_round0.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round0.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round1.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round2.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round3.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round4.jsonl  step2.1_gen_gpt_4.1_mini_seed42_round5.jsonl  step2.1_merged_gpt_4.1_mini_seed42_round2.jsonl  step2.1_merged_gpt_4.1_mini_seed42_round4.jsonl  step2.2_eval_gpt_4.1_mini_seed42_round0.jsonl  (+22 more)
scripts/: entrypoint.sh  run.sh  run_old_acecoderv2.sh
(+260 files in other folders)
